# ximu_ros

./: CMakeLists.txt  README.md  package.xml
msg/: InertialMeasurements.msg
src/scripts/: .position_euler_pub.py.swp  ximu_pub.py
